// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProblemSection Snapshots matches snapshot for visual regression prevention 1`] = `
<section
  class="section-spacing bg-secondary-50 "
>
  <div
    class="container-brand"
  >
    <div
      class="text-center mb-16"
    >
      <h2
        class="text-hero text-brand-navy mb-8"
      >
        The Hidden Cost of Manual Workflows
      </h2>
      <div
        class="inline-block px-8 py-6 rounded-2xl mb-8"
        style="background: linear-gradient(135deg, var(--brand-navy) 0%, var(--brand-navy-light) 100%);"
      >
        <div
          class="text-center"
        >
          <h3
            class="text-4xl md:text-5xl lg:text-6xl font-inter font-bold text-white mb-2"
          >
            $236K - $330K
          </h3>
          <p
            class="text-xl md:text-2xl font-inter text-gray-200"
          >
            Annual Cost of Inefficiency
          </p>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-16"
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="clock-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Time Drain
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Manual processes consuming excessive employee hours and reducing productivity
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="dollar-sign-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Hidden Costs
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Invisible expenses from inefficient workflows and repeated manual tasks
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="alert-triangle-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Error Prone
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Human mistakes in manual processes leading to costly corrections and delays
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="frown-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Employee Burnout
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Repetitive manual work reducing job satisfaction and increasing turnover
          </p>
        </div>
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="inline-flex items-center space-x-2 text-brand-navy font-inter font-semibold"
      >
        <span
          class="text-lg"
        >
          Ready to reclaim your time and reduce costs?
        </span>
        <div
          class="w-0 h-0 border-l-8 border-r-8 border-t-8 border-l-transparent border-r-transparent border-t-brand-navy animate-bounce"
        />
      </div>
      <p
        class="text-secondary-600 mt-2"
      >
        Discover how our intelligent automation solutions can transform your workflows below.
      </p>
    </div>
  </div>
</section>
`;

exports[`ProblemSection Snapshots matches snapshot with custom className 1`] = `
<section
  class="section-spacing bg-secondary-50 test-class"
>
  <div
    class="container-brand"
  >
    <div
      class="text-center mb-16"
    >
      <h2
        class="text-hero text-brand-navy mb-8"
      >
        The Hidden Cost of Manual Workflows
      </h2>
      <div
        class="inline-block px-8 py-6 rounded-2xl mb-8"
        style="background: linear-gradient(135deg, var(--brand-navy) 0%, var(--brand-navy-light) 100%);"
      >
        <div
          class="text-center"
        >
          <h3
            class="text-4xl md:text-5xl lg:text-6xl font-inter font-bold text-white mb-2"
          >
            $236K - $330K
          </h3>
          <p
            class="text-xl md:text-2xl font-inter text-gray-200"
          >
            Annual Cost of Inefficiency
          </p>
        </div>
      </div>
    </div>
    <div
      class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6 mb-16"
    >
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="clock-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Time Drain
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Manual processes consuming excessive employee hours and reducing productivity
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="dollar-sign-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Hidden Costs
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Invisible expenses from inefficient workflows and repeated manual tasks
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="alert-triangle-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Error Prone
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Human mistakes in manual processes leading to costly corrections and delays
          </p>
        </div>
      </div>
      <div
        class="rounded-lg border bg-card text-card-foreground shadow-sm card-elevated hover:shadow-xl transition-all duration-300 hover:scale-105"
      >
        <div
          class="p-6 text-center"
        >
          <div
            class="w-16 h-16 mx-auto mb-4 bg-gradient-accent rounded-full flex items-center justify-center"
          >
            <div
              class="w-8 h-8 text-brand-navy"
              data-testid="frown-icon"
            />
          </div>
          <h3
            class="text-xl font-inter font-semibold text-brand-navy mb-3"
          >
            Employee Burnout
          </h3>
          <p
            class="text-secondary-600 leading-relaxed"
          >
            Repetitive manual work reducing job satisfaction and increasing turnover
          </p>
        </div>
      </div>
    </div>
    <div
      class="text-center"
    >
      <div
        class="inline-flex items-center space-x-2 text-brand-navy font-inter font-semibold"
      >
        <span
          class="text-lg"
        >
          Ready to reclaim your time and reduce costs?
        </span>
        <div
          class="w-0 h-0 border-l-8 border-r-8 border-t-8 border-l-transparent border-r-transparent border-t-brand-navy animate-bounce"
        />
      </div>
      <p
        class="text-secondary-600 mt-2"
      >
        Discover how our intelligent automation solutions can transform your workflows below.
      </p>
    </div>
  </div>
</section>
`;
